--- a/src/static/css/custom.css
+++ b/src/static/css/custom.css
@@ -8,13 +8,29 @@
     margin-bottom: 1em;
 }
 
+.img-preview2 {
+    width: 450px;
+    height: 250px;
+    position: relative;
+    border: 5px solid #F8F8F8;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+    margin-top: 5em;
+    margin-bottom: 1em;
+}
+
 
 #upload_button input[type=file] {
     display:none;
+	width: 450px;
+    height: 250px;
+    position: relative;
+    border: 5px solid #F8F8F8;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+    margin-top: 10em;
+    margin-bottom: 1em;
 }
 
 .container {
-  display: flex;
   justify-content: center;
 }
 .center {
